# crab_project

./: .gitignore  README.md
BBB/: uart_config.sh
BBB/DTC/: dtc.sh  enable-uart5-00A0.dtbo  enable-uart5.dts
BBB/QtSixA-1.5.1/: INSTALL  Makefile  README  TODO
BBB/catkin_ws/src/crab_msgs/: CMakeLists.txt  CMakeLists.txt~
BBB/catkin_ws/src/crab_msgs/msg/: BodyCommand.msg~  GaitCommand.msg~  LegIKRequest.msg~  LegPositionState.msg~  LegsJointsState.msg  LegsJointsState.msg~
BBB/catkin_ws/src/crab_msgs/srv/: GetLegIKSolver.srv  GetLegIKSolver.srv~  GetLegsIKSolver.srv~
crab_body_kinematics/: CMakeLists.txt  package.xml  package.xml~
crab_body_kinematics/src/: body_kinematics.cpp  body_kinematics.hpp  body_kinematics_shit.cpp  body_kinematics_shit.hpp  rpy_body_kinematics.cpp
crab_description/: manifest.xml~  urdf.rviz
crab_description/launch/: body_kinematics_disp_mode.launch  body_kinematics_disp_mode.launch~  display_leg.launch  display_model.launch  display_model.launch~  gait_disp_mode .launch~  gait_disp_mode.launch  gait_kinematics_disp_mode.launch  gait_kinematics_disp_mode.launch~  gait_kinematics_imu.launch
crab_description/models/: crab_model _gazebo.xacro~  crab_model.urdf  crab_model.xacro  (+2 more)
crab_gait/: CMakeLists.txt~
crab_imu/: CMakeLists.txt~  package.xml
crab_joint_publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
crab_leg_kinematics/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
crab_maestro_controller/: CMakeLists.txt  CMakeLists.txt~
crab_teleop_joy/: package.xml
(+251 files in other folders)
